<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criptomonedas"
        android:textSize="25sp"
        android:textColor="@color/red_A22"
        android:background="@color/cianB1F"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="3dp"
    />

    <Button
        android:id="@+id/BotonUno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bitcoin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/amarillo"
    />
    <Button
        android:id="@+id/BotonDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dogecoin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/amarillo"
        />
    <Button
        android:id="@+id/BotonTres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ethereum"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/gris"
        />
    <Button
        android:id="@+id/BotonCuatro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardano"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/purple_700"
        />
    <Button
        android:id="@+id/BotonCinco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/litecoin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/purple_500"
        />
    <Button
        android:id="@+id/BotonSeis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/binance"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/amarillo"
        />
    <Button
        android:id="@+id/BotonSiete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/polkadot"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/purple_200"
        />
    <Button
        android:id="@+id/BotonOcho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ripple"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/purple_700"
        />
    <Button
        android:id="@+id/BotonNueve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bitbay"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/purple_500"
        />
    <Button
        android:id="@+id/BotonDiez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stellar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:backgroundTint="@color/cianB1F"
        android:textColor="@color/teal_700"
        />
</LinearLayout>